@@ -19,8 +19,10 @@ Version 2.11.0
 
   * Terraform: Support heredocs (#1909)
   * Terraform: Add the 'set' type
+  * Debian control: Add missing fields (#1946)
 
 - Clean up unused imports (#1887)
+
 
 Version 2.10.0
 --------------
